--- a/Dia1_Hello_World/style.css
+++ b/Dia1_Hello_World/style.css
@@ -1,3 +1,8 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 html {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 62.5%;
@@ -6,16 +11,24 @@ body {
   font-size: 1.6rem;
   background-color: antiquewhite;
 }
+h1{
+  margin: 2rem;
+}
 main {
     display: flex;
     flex-direction: column;
-    width: 65%;
+    width: 50%;
     align-self: center;
     align-items: center;
+    background-color: rgb(221, 204, 204);
+    border-radius: 5rem;
+    margin: 4rem auto;
+    padding: 1.5rem;
 }
 p {
   border-radius: 1rem;
   padding: 1rem;
+  margin: 2rem;
   width: fit-content;
   background-color: rgb(58, 48, 48);
   font-family: "Courier New", Courier, monospace;
