--- a/css/dias.css
+++ b/css/dias.css
@@ -1,12 +1,4 @@
-*{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-body {
-  background-color: antiquewhite;
-}
-h1{
+h1 {
   margin: 2rem;
 }
 main {
@@ -15,12 +7,12 @@ main {
   width: 50%;
   align-self: center;
   align-items: center;
-  background-color: rgb(221, 204, 204);
+  background-color: rgb(228, 208, 208);
   border-radius: 5rem;
   margin: 4rem auto;
   padding: 1.5rem;
 }
-p {
+.code {
   border-radius: 1rem;
   padding: 1rem;
   margin: 2rem;
@@ -30,9 +22,13 @@ p {
   font-weight: bold;
   color: #ddd;
 }
-p::before {
+.code::before {
   content: "|";
   color: red;
   font-weight: bolder;
   font-size: 2.5rem;
+}
+.main-footer{
+  font-size: 2rem;
+  margin: 1rem;
 }
